Pop over user  contetnt color, size changed,  overflow hiddeb fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -2,8 +2,17 @@
     .topAlign {
         margin-top: 47px;
         font-family: "myriadpro-regular";
-        font-size: 16px;
-        line-height: 27.5px;
+        font-size: 12px;
+        line-height: 16.5px;
+        max-width: 150px;
+        color: #888585;
+    }
+
+    .popover-panel ul {
+        list-style: none;
+        color: #888585;
+        font-size: 12px;
+        line-height: 16.5px;
     }
 </style>
 <div class="menu-container">
@@ -11,8 +20,8 @@
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="user-list" *ngIf="topFiveUsers.length>0">
         <li *ngFor="let topFiveUser of topFiveUsers">
-           
-            <img class="user-image img-circle" src="{{topFiveUser?.imageUrl}}" (mouseover)='userover(topFiveUser?.id)' [popover]="userInfoDetailsPopoveruser" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true"/>
+
+            <img class="user-image img-circle" src="{{topFiveUser?.imageUrl}}" (mouseover)='userover(topFiveUser?.id)' [popover]="userInfoDetailsPopoveruser" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true" />
             <div class="top-user-info">
                 <!--<a [routerLink]="['/dashboard/viewprofile/',topFiveUser.userid,'user-question']"> {{topFiveUser?.name}}</a>-->
                 <a (click)="gotoProfile(topFiveUser?.userId)" for="contain" data-toggle="dropdown" class="padding-middle"> {{topFiveUser?.name}}</a>
@@ -24,79 +33,29 @@
             </div>
             <div class="clearfix"></div>
 
-            
+
         </li>
     </ul>
 </div>
 <popover-content #userInfoDetailsPopoveruser>
-    <ul style="list-style-type: none;">
-        <li>
-            <img class="user-image " src="{{userInfoDetails?.imageUrl}}" />
-
-            <div class="user-info">
-                <div class="user-detail">
-                    {{userInfoDetails?.fullName}}
-                    <br />
-                    <span style="font-size: 12px;"> {{userInfoDetails?.title}}</span>
-                </div>
-                <!--<div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>-->
-            </div>
-        </li>
-
-    </ul>
-    <br />
-    <div class="topAlign">
-        <ul class="fa-ul">
-            <li *ngIf="userInfoDetails?.answerCount!=0">
-                <i class="fa-li fa fa-check-square"></i>Answers: {{userInfoDetails?.answerCount}}
-            </li>
-            <li *ngIf="userInfoDetails?.questionCount!=0"><i class="fa-li fa fa-question"></i>Questions: {{userInfoDetails?.questionCount}}</li>
-
-            <li *ngIf="userInfoDetails?.education">
-                <i class="fa-li fa fa-university"></i>Education: {{userInfoDetails?.education}}
-            </li>
-            <li *ngIf="userInfoDetails?.employment">
-                <i class="fa-li fa fa-info-circle"></i>employment: {{userInfoDetails?.employment}}
-            </li>
-            <li *ngIf="userInfoDetails?.place">
-                <i class="fa-li fa fa-home "></i>Place: {{userInfoDetails?.place}}
-            </li>
-            <li *ngIf="userInfoDetails?.otherExperience">
-                <i class="fa-li fa fa-cog"></i>otherExperience: {{userInfoDetails?.otherExperience}}
-            </li>
-
-            <li *ngIf="userInfoDetails?.questionViewCount!=0">
-                <i class="fa-li fa fa-eye">
-
-                </i>Question Views: {{userInfoDetails?.questionViewCount}}
-
-            </li>
-
-
-        </ul>
-    </div>
-
-
-</popover-content>
-
-<!--
-<popover-content #userInfoDetailsPopoveruser>
-    <div *ngIf="userInfoDetails">
+    <div class="popover-panel">
         <ul style="list-style-type: none;">
             <li>
                 <img class="user-image " src="{{userInfoDetails?.imageUrl}}" />
 
                 <div class="user-info">
                     <div class="user-detail">
-                        {{userInfoDetails?.fullName}} <br />
+                        {{userInfoDetails?.fullName}}
+                        <br />
                         <span style="font-size: 12px;"> {{userInfoDetails?.title}}</span>
                     </div>
+                    <!--<div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>-->
                 </div>
             </li>
 
         </ul>
         <br />
-        <div class="">
+        <div class="topAlign">
             <ul class="fa-ul">
                 <li *ngIf="userInfoDetails?.answerCount!=0">
                     <i class="fa-li fa fa-check-square"></i>Answers: {{userInfoDetails?.answerCount}}
@@ -116,16 +75,13 @@
                     <i class="fa-li fa fa-cog"></i>otherExperience: {{userInfoDetails?.otherExperience}}
                 </li>
 
-                <li *ngIf="userInfoDetails?.questionViewCount">
+                <li *ngIf="userInfoDetails?.questionViewCount!=0">
                     <i class="fa-li fa fa-eye">
 
                     </i>Question Views: {{userInfoDetails?.questionViewCount}}
 
                 </li>
-
-
             </ul>
         </div>
     </div>
 </popover-content>
--->
