--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -88,4 +88,6 @@
     <div *ngFor="let question of questions">
         <question-panel [question]="question"></question-panel>
     </div>
+    <!-- For Hover pop up get some space to show -->
+    <div style="height:200px;position:relative;"></div> 
 </div>
