--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.css
@@ -1,42 +1,74 @@
-﻿    /*======set back ground for question home page.=======*/
-    .navbar-right {
-        padding-right:10px;
-        position:relative;
-    }
+﻿/*======set back ground for question home page.=======*/
+/*div {
+    width: 200px;
+    height: 200px;
+    display: block;
+    position: relative;
+}
+
+    div::after {
+        content: "";
+        background: url(image.jpg);
+        opacity: 0.5;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }*/
+
+.navbar-right {
+    padding-right: 10px;
+    position: relative;
+}
 
 
-    .notification-font {
-        font-size: 20px;
-        padding-top: 5px;
-    }
+.notification-font {
+    font-size: 20px;
+    padding-top: 5px;
+}
 
-    /*.user-image {
+/*.user-image {
         height: 30px;
         width: 30px;
         border-radius: 20px;
     }*/
 
-    .badge {
-        /*display: block;*/
-        position: absolute;
-        top: 7px;
-        right: 7px;
-        line-height: 16px;
-        height: 16px;
-        padding: 0 5px;
-        font-family: Arial, sans-serif;
-        color: white;
-        text-shadow: 0 1px rgba(0, 0, 0, 0.25);
-        border: 1px solid;
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 1px rgba(0, 0, 0, 0.08);
-        box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 1px rgba(0, 0, 0, 0.08);
-    }
-    .form-horizontal .form-group{
-        margin-left:5px;
-    }
-    
+.badge {
+    /*display: block;*/
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    line-height: 16px;
+    height: 16px;
+    padding: 0 5px;
+    font-family: Arial, sans-serif;
+    color: white;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.25);
+    border: 1px solid;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 1px rgba(0, 0, 0, 0.08);
+    box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 1px rgba(0, 0, 0, 0.08);
+}
+
+.form-horizontal .form-group {
+    margin-left: 5px;
+}
+
 .dropdown-toggle:focus {
     color: #fff;
     background-color: transparent !important;
 }
+
+/*.background-img::after {
+        content: "";
+        background: url(../images/background.png);
+        opacity: 0.5;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }*/
