Loader modal  inside qiestion panel

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -16,6 +16,13 @@
         margin-right:10px;
         font-size:17px;
     }
+    .center-width{
+        position:relative;
+    }
+    .center-width .modal-overlay{
+        position:absolute;
+        overflow:hidden;
+    }
 </style>
 <div class="row row-fix">
     <div #dialogAnchor></div>
