--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,4 +1,13 @@
-﻿<div class="row">
+﻿<style>
+    .center-width{
+        position:relative;
+    }
+    .center-width .modal-overlay{
+        position:absolute;
+        overflow:hidden;
+    }
+</style>
+<div class="row">
     <div class="left-panel">
         <div id="leftPanel">
             <topfive-question-left-menu> </topfive-question-left-menu>
@@ -9,10 +18,11 @@
     <div class="right-panel">
         <topfive-user></topfive-user>
     </div>
-    <div class="modal-overlay z-modal" *ngIf="isLoading">
-        <div class="loader"></div>
-    </div>
+    
     <div class="center-width">
+        <div class="modal-overlay z-modal" *ngIf="isLoading">
+            <div class="loader"></div>
+        </div>
         <div class="tab" *ngFor="let question of questions">
             <question-panel [question]="question"></question-panel>
         </div>
