akash:some update of image cropping

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -110,6 +110,7 @@
 </style>
 <div>
     <div #credentialDialogAnchor></div>
+    <div #previewImageDialogAnchor></div>
 </div>
 <div class="profile-info-container">
     <div class="col-md-3">
