Profile page category, and right menu style fixed, Answer panel font changed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
@@ -3,7 +3,10 @@
         min-height: 20vh;
         padding-right: 30%;
     }
-
+    .statistic-panel ul{
+        list-style:none;
+        font-size:12px;
+    }
     .profile-rightmenu {
         color: #9d9d9b;
         width: 100%;
