--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -29,3 +29,10 @@ hr {
 .inline-display {
     display: inline-block;
 }
+p {
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    overflow: hidden;
+    color: black;
+}
