--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
@@ -1,10 +1,28 @@
 ﻿<style>
     .profile-cat-img {
         float: left;
-        height: 50px;
-        width: 50px;
-        border-radius: 4px;
-        padding-right: 4px;
+        height: 30px;
+        width: 30px;
+        border-radius: 10%;
+        margin-right: 12px;
+    }
+
+    .statistic-panel ul {
+        list-style: none;
+    }
+
+    .profile-rightmenu a {
+        font-size: 12px;
+        font-weight: 700;
+    }
+    .profile-rightmenu h3{
+        line-height:10px;
+    }
+    .profile-rightmenu div{
+        font-size:10px;
+    }
+    .profile-rightmenu li{
+        margin-bottom:20px;
     }
 </style>
 <div class="statistic-panel">
