--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -31,7 +31,7 @@ hr {
 }
 p {
     font-size: 17px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica;
     margin: 0;
     overflow: hidden;
     color: black;
