Hover for follow button

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -6,6 +6,9 @@
     .enableFollowingImg {
         opacity: 1;
     }
+    .enableFollowingImg:hover{
+        height:55px;
+    }
 </style>
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
     
