Category panel show more topics home page show loader issue fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -3,6 +3,7 @@
         position:relative;
     }
     .center-width .modal-overlay{
+        min-height: 600px;
         position:absolute;
         overflow:hidden;
     }
