--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
@@ -2,6 +2,9 @@
     .article-details h3,article-details a{
         display:inline-block;
     }
+    .filter-panel .btn{
+        width:200px;
+    }
 </style>
 <div>
     <div #dialogAnchor></div>
