--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,28 +1,54 @@
 ﻿<style>
-    .category-header{
+    .category-header {
+    }
 
-    }
-    .category-header h2{
-        display:inline-block;
-    }
-    .category-header h4{
-        text-align:center;
-    }
-    .read-question-button{
-        margin-left:15px;
-        margin-bottom:10px;
+        .category-header h2 {
+            display: inline-block;
+        }
+
+        .category-header h4 {
+            text-align: center;
+        }
+
+    .read-question-button {
+        margin-left: 15px;
+        margin-bottom: 10px;
         display: inline-block;
     }
-    .read-question-button> a{
-        margin-right:10px;
-        font-size:17px;
+
+        .read-question-button > a {
+            margin-right: 10px;
+            font-size: 17px;
+        }
+
+    .center-width {
+        position: relative;
     }
-    .center-width{
-        position:relative;
+
+    .read-question-button .btn {
+        width: 200px;
     }
-    .center-width .modal-overlay{
-        position:absolute;
-        overflow:hidden;
+
+    read-question-button ..dropdown-menu {
+        left: 5px;
+        min-width: 200px;
+    }
+
+    .center-width .modal-overlay {
+        min-height: 600px;
+        position: absolute;
+        overflow: hidden;
+    }
+
+    .tags-container {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .more-btn {
+        float: left;
+        padding: 5px;
+        font-weight: 700;
     }
 </style>
 <div class="row row-fix">
@@ -39,7 +65,7 @@
 <div class="right-panel">
     <category-left-menu [caegoryId]="categoryId"></category-left-menu>
 </div>
-<div class="center-width center-body z-ground" >
+<div class="center-width center-body z-ground">
     <div class="modal-overlay z-modal" *ngIf="loader.isLoading">
         <div class="loader"></div>
     </div>
@@ -65,15 +91,14 @@
         </p>
     </div>
     <br />
-    <div class="row row-fix">
-       
-        <div class="tags-container">
-            <div class="tags" *ngFor="let topic of topFiveTopics">
-                <a [routerLink]="['/question/home',topic?.categoryId,topic?.id,0]"> {{topic.topicName}}</a>
-            </div>
+    <div class="row tags-container">
+        <div class="tags" *ngFor="let topic of topFiveTopics">
+            <a [routerLink]="['/question/home',topic?.categoryId,topic?.id,0]"> {{topic.topicName}}</a>
         </div>
+        <div class="more-btn"><a (click)="showMoreTopics(question)" *ngIf="!showMoreTopic">Show more..</a></div>
+        <div class="more-btn"><a (click)="hideMoreTopics(question)" *ngIf="showMoreTopic">Hide more..</a></div>
     </div>
-    <div class="filter-panel">
+    <div class="filter-panel" *ngIf="!showMoreTopic">
         <div class="read-question-button">
             <a (click)="getQuestionsAnswered(categorySelected.id)">
                 {{totalCount?.totalAnsweredQuestion}}  Read
@@ -106,5 +131,5 @@
         <question-panel [question]="question"></question-panel>
     </div>
     <!-- For Hover pop up get some space to show -->
-    <div style="height:200px;position:relative;"></div> 
+    <div style="height:200px;position:relative;"></div>
 </div>
