Answer dialog  usr profile show on top

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -9,6 +9,10 @@
     padding-left:15px;
     float: left;
     display: block;
+    font-size: 12px;
+    margin-top: 10px;
+    margin-left: 70px;
+    font-family: myriadpro-regular;
 }
 
 .user-info:before {
