--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -27,9 +27,10 @@
 
     .read-question-button .btn {
         width: 200px;
+        color: black;
     }
 
-    read-question-button ..dropdown-menu {
+    read-question-button .dropdown-menu {
         left: 5px;
         min-width: 200px;
     }
