--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
@@ -57,7 +57,7 @@
                         <img [src]="data1.image"
                              [width]="200"
                              [height]="200">
-                        {{data1.image.length}}
+                        <!--{{data1.image.length}}-->
                     </span>
                     <div class="row">
                         <div class="col-lg-2">
