--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -124,6 +124,9 @@
     .update-credential {
         margin-left: 10px;
     }
+    .profile-image-center .btn {
+        color: black;
+    }
 </style>
 <div>
     <div #credentialDialogAnchor></div>
@@ -137,7 +140,7 @@
     <div class="col-md-3">
         <div class="profile-image-center">
             <img class="profile-image" src="{{imageLink}}" />
-            <input type="file" name="documents" class="custom-file-input" (change)="onChangeImage($event)" [(ngModel)]="doc" #documents="ngModel" *ngIf="isOwner">
+            <button type="button" name="documents" class="btn btn-default" (click)="onUploadClick()"  *ngIf="isOwner">Upload Image</button>
         </div>
     </div>
     <div class="col-md-9">
