Nav bar: right nav  hover issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -1,5 +1,8 @@
 ﻿@import (reference) "../../bower_components/bootstrap/less/variables.less";
 
+.nav{
+    position:relative;
+}
 .navbar {
     position: fixed;
     height: 64px;
