--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
@@ -16,6 +16,8 @@ a {
     border: none;
     border-radius: 10px;
     font-size: 16px;
+    margin-top: 14px;
+    margin-bottom: 15px;
 }
 
 .summery-panel {
