akash:caetgory and flicked of modal bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -62,6 +62,7 @@
         </div>
 
     </div>
+    <div style="height:200px;position:relative;"></div>
 </div>
 <div *ngIf="showQuestionEditForm">
     <div class="center-width center-body z-ground">
