--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -47,7 +47,7 @@
         <div *ngFor="let answer of question.answers">
             <div class="article-details" *ngIf="answer">
                 <div id="{{answer?.id}}">
-                    <user-info [userObj]="answer?.userViewModel" [viewDate]="answer?.createdOn"></user-info>
+                    <user-info [userObj]="answer?.userViewModel" [viewDate]="answer?.createdOn" [isAnonymous]="answer?.isAnonymous"></user-info>
                     <div class="pull-right">
                         <a (click)="QuestionFollowing(answer)">
                             <img [ngClass]="{ 'enableFollowingImg': !answer?.isFollowing, 'disabledFollowingImg': answer?.isFollowing  }" src="../../images/FollowingImage.jpg" />
