--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -15,7 +15,7 @@
         line-height: 16.5px;
     }
 </style>
-<div class="menu-container">
+<div class="menu-container hidden-xs">
     <div class="list-title"><h4>Usuarios más destacados</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="user-list" *ngIf="topFiveUsers.length>0">
