--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
@@ -8,6 +8,7 @@
 .left-panel-list {
     color: #215ea7;
     font-size: 14px;
+    list-style:none;
 }
 .left-panel-list li{
     margin-bottom:5px;
