--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -1,8 +1,9 @@
 ﻿@import (reference) "../../bower_components/bootstrap/less/variables.less";
 
-.nav{
-    position:relative;
+.nav {
+    position: relative;
 }
+
 .navbar {
     position: fixed;
     height: 64px;
@@ -69,6 +70,7 @@
         border: none;
         margin: 0 15px;
 
+
         .button-label {
             display: inline-block;
         }
@@ -77,6 +79,13 @@
             display: inline-block;
         }
     }
+}
+
+.navbar-toggle {
+    margin-top: -29px;
+    background: none;
+    border: 0;
+    margin-right: 17px;
 }
 
 .navbar-brand {
@@ -174,7 +183,19 @@
     background-color: white;
     border-bottom: 1px solid #777;
 }
-.navbar-right{
-    float:right;
-    margin-right:15px;
+
+.navbar-right {
+    float: right;
+    margin-right: 15px;
+}
+
+@media only screen and (max-width:767px) {
+
+    .navbar-brand {
+        margin-top: 4px;
+
+        .logo {
+            width: 45px;
+        }
+    }
 }
