--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-﻿<div class="row" id="tabs">
+﻿<div class="row hidden-xs" id="tabs">
     <div class="tab-panel-container center-width">
         <div class="tab-header-col-md-1 left-arrow"> <a class="arrow-sign" (click)="rightclick()"><span class="icon-arrow-left"></span></a></div>
         <div class="tab-header-col-md-10">
