--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-question-left-menu.component.html
@@ -1,4 +1,4 @@
-﻿<div id="category" class="menu-container">
+﻿<div id="category" class="menu-container hidden-xs">
     <div class="list-title"><h4>Related Questions</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list">
