--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-topic.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-topic.component.html
@@ -1,4 +1,4 @@
-﻿<div class="menu-container">
+﻿<div class="menu-container hidden-xs">
     <div class="list-title"><h4>Related Topic</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list" *ngIf="relatedTopics.length>0">
