--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-question-left-menu.component.html
@@ -1,4 +1,4 @@
-﻿<div class="menu-container">
+﻿<div class="menu-container hidden-xs">
     <div class="list-title"><h4>Preguntas más destacadas</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list" *ngIf="topFiveQuestions.length>0">
