--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
@@ -13,13 +13,13 @@
     <div #logginAnchor></div>
 </div>
 <div class="panel-article">
-    <div class="questions-container" (click)="answerDialogBoxIfNoAnswer(question)">
+    <div class="questions-container" >
         <div class="details-container" *ngIf="!showQuestionEditForm">
             <question-header [question]="question"></question-header>
             <h3 class="question-title">
                 <a [routerLink]="['/question/detail',question.id]">{{question.title}}</a>
             </h3>
-            <div class="article-details">
+            <div class="article-details" (click)="answerDialogBoxIfNoAnswer(question)">
                 <div *ngIf="!(question.answerCount>0)">
                     <button class="answer-button" (click)="answerDialogBox(question)">Answer</button>
                 </div>
