--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,5 +1,5 @@
 ﻿<div #logginAnchor></div>
-<div [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
+<div [ngClass]="placeBottom"   id="search-box" (click)="handleClick($event)">
     <div class="center-width" id="adv-search">
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="z-header" role="form" id="search-panel">
             <div class="icon-container">
@@ -32,7 +32,7 @@
             </div>
 
             <button type="submit" class="ask-button fixed-height" [disabled]="!titleName.valid">
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span><span class="ask-text">Enviar</span>
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span><span class="ask-text hidden-xs">Enviar</span>
             </button>
         </form>
     </div>
