--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -1,13 +1,16 @@
-﻿#search-panel{
-    position:relative;
+﻿#search-panel {
+    position: relative;
 }
+
+
+
 .ask-button {
     background-color: #f6912b;
     border: 1px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    color:white;
-    width:10%;
+    color: white;
+    width: 10%;
 }
 
 .icon-container {
@@ -103,7 +106,7 @@ a {
     border: 1px solid #eeeeee;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    padding-left:15px;
+    padding-left: 15px;
 }
 
 .form-group {
@@ -138,15 +141,15 @@ a {
     left: 0;
     right: 0;
     overflow: visible;
-    margin-left:-15px;
-    margin-right:-15px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .top-fixed {
     position: fixed;
     left: 0;
     right: 0;
-    margin-top:5px;
+    margin-top: 5px;
 }
 
 .fixed-height {
@@ -290,3 +293,35 @@ label {
         top: -27px;
         left: 47%;
     }
+
+@media only screen and (max-width:767px) {
+    /*.search-box {
+        padding: 0 41px 0px;
+        position: fixed;
+        width: 100%;
+        top: 9px;
+        z-index: 9999;
+    }*/
+
+    .search-input {
+        width: calc(100% - 28px);
+    }
+
+    .ask-button {
+        width: 28px;
+    }
+
+    .bottom-float {
+        padding: 0;
+        position: fixed;
+        width: calc(100% - 117px);
+        left: 60px;
+        top: 9px;
+        bottom: inherit;
+        margin: 0;
+        z-index: 9000;
+    }
+    .bottom-float .center-width {
+        width: 100%;
+    }
+}
